mdapipkg/Scratch/objects/Credit_Calculation__mdt.object
<CustomObject>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salaried</fullName>
                    <default>true</default>
                    <label>Salaried</label>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lower_Bound__c</fullName>
        <label>Lower Bound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Criteria_Options__c</fullName>
        <label>Sub-Criteria Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adequate</fullName>
                </value>
                <value>
                    <fullName>Adequately Supported</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Clerical</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>Low net worth</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Motor Vehicle</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Net worth not commensurate with age and earning</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Over The Counter</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Post Graduate</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Professional service provider</fullName>
                </value>
                <value>
                    <fullName>RealEstate - Commercial</fullName>
                </value>
                <value>
                    <fullName>Realestate - Residential</fullName>
                </value>
                <value>
                    <fullName>Reasonable net worth</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Criteria__c</fullName>
        <label>Sub-Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repayment Method</fullName>
                    <default>true</default>
                    <label>Repayment Method</label>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Financial Statement Support</fullName>
                </value>
                <value>
                    <fullName>Nature of Engagement</fullName>
                </value>
                <value>
                    <fullName>Working Capital</fullName>
                </value>
                <value>
                    <fullName>Ability to Service</fullName>
                </value>
                <value>
                    <fullName>Loan to Value</fullName>
                </value>
                <value>
                    <fullName>Length of Trade</fullName>
                </value>
                <value>
                    <fullName>Credit History in last 24 Months</fullName>
                </value>
                <value>
                    <fullName>Years at Current Residence</fullName>
                </value>
                <value>
                    <fullName>Professional Category</fullName>
                </value>
                <value>
                    <fullName>Industry of Employment</fullName>
                </value>
                <value>
                    <fullName>Employment Status</fullName>
                </value>
                <value>
                    <fullName>Net Worth</fullName>
                </value>
                <value>
                    <fullName>Residential Status</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Length of Current Employment</fullName>
                </value>
                <value>
                    <fullName>Type of Industry</fullName>
                </value>
                <value>
                    <fullName>Financial Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upper_Bound__c</fullName>
        <label>Upper Bound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_of_Sub_Criteria__c</fullName>
        <label>Weight of Sub-Criteria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Credit Calculation</label>
    <pluralLabel>Credit Calculations</pluralLabel>
</CustomObject>